appview: rework compare page
trigger comparison on button click, this simplifes a variety of things:

- we can load a diff on page visit without javascript
- we can avoid modifying url using javascript and breaking back buttons
- we can avoid a lot of javascript code

Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/repo/index.html
+++ b/appview/pages/templates/repo/index.html
@@ -101,7 +101,7 @@
         </button>
     {{ end }}
         <a
-            href="/{{ .RepoInfo.FullName }}/compare"
+            href="/{{ .RepoInfo.FullName }}/compare?base={{ $.Ref | urlquery }}"
             class="btn flex items-center gap-2 no-underline hover:no-underline"
             title="Compare branches or tags"
         >
