appview: pages: pathUnscape breadcrumbs in repo/{blob,tree}
Signed-off-by: Anirudh Oppiliappan <anirudh@tangled.sh>

--- a/appview/pages/templates/repo/blob.html
+++ b/appview/pages/templates/repo/blob.html
@@ -24,12 +24,12 @@
                         <a
                             href="{{ index . 1 }}"
                             class="text-bold text-gray-500 dark:text-gray-400 {{ $linkstyle }}"
-                            >{{ index . 0 }}</a
+                            >{{ pathUnescape (index . 0) }}</a
                         >
                         /
                     {{ else }}
                         <span class="text-bold text-black dark:text-white"
-                            >{{ index . 0 }}</span
+                            >{{ pathUnescape (index . 0) }}</span
                         >
                     {{ end }}
                 {{ end }}
