--- a/appview/pages/templates/repo/tree.html
+++ b/appview/pages/templates/repo/tree.html
@@ -62,7 +62,9 @@
                   {{ i "folder" "size-4 fill-current" }}{{ .Name }}
                 </div>
             </a>
-            <time class="text-xs text-gray-500 dark:text-gray-400">{{ timeFmt .LastCommit.When }}</time>
+            {{ if .LastCommit}}
+              <time class="text-xs text-gray-500 dark:text-gray-400">{{ timeFmt .LastCommit.When }}</time>
+            {{ end }}
         </div>
     </div>
     {{ end }}
@@ -77,7 +79,9 @@
                   {{ i "file" "size-4" }}{{ .Name }}
                 </div>
             </a>
-            <time class="text-xs text-gray-500 dark:text-gray-400">{{ timeFmt .LastCommit.When }}</time>
+            {{ if .LastCommit}}
+              <time class="text-xs text-gray-500 dark:text-gray-400">{{ timeFmt .LastCommit.When }}</time>
+            {{ end }}
         </div>
     </div>
     {{ end }}
