--- a/appview/pages/templates/repo/pulls/fragments/pullStack.html
+++ b/appview/pages/templates/repo/pulls/fragments/pullStack.html
@@ -8,58 +8,6 @@
   {{ end }}
 {{ end }}
 
-{{ define "summarizedHeader" }}
-  <div class="flex text-sm items-center justify-between w-full">
-    <div class="flex items-center gap-2 min-w-0 flex-1 pr-2">
-      <div class="flex-shrink-0">
-        {{ block "summarizedPullState" . }} {{ end }}
-      </div>
-      <span class="truncate text-sm text-gray-800 dark:text-gray-200">
-        <span class="text-gray-500 dark:text-gray-400">#{{ .PullId }}</span>
-        {{ .Title }}
-      </span>
-    </div>
-
-    <div class="flex-shrink-0">
-      {{ $latestRound := .LastRoundNumber }}
-      {{ $lastSubmission := index .Submissions $latestRound }}
-      {{ $commentCount := len $lastSubmission.Comments }}
-      <span>
-        <div class="inline-flex items-center gap-2">
-          {{ i "message-square" "w-3 h-3 md:hidden" }}
-          {{ $commentCount }}
-          <span class="hidden md:inline">comment{{if ne $commentCount 1}}s{{end}}</span>
-        </div>
-      </span>
-      <span class="mx-2 before:content-['·'] before:select-none"></span>
-      <span>
-        <span class="hidden md:inline">round</span>
-        <span class="font-mono">#{{ $latestRound }}</span>
-      </span>
-    </div>
-  </div>
-{{ end }}
-
-{{ define "summarizedPullState" }}
-  {{ $fgColor := "text-gray-600 dark:text-gray-300" }}
-  {{ $icon := "ban" }}
-
-  {{ if .State.IsOpen }}
-    {{ $fgColor = "text-green-600 dark:text-green-500" }}
-    {{ $icon = "git-pull-request" }}
-  {{ else if .State.IsMerged }}
-    {{ $fgColor = "text-purple-600 dark:text-purple-500" }}
-    {{ $icon = "git-merge" }}
-  {{ else if .State.IsDeleted }}
-    {{ $fgColor = "text-red-600 dark:text-red-500" }}
-    {{ $icon = "git-pull-request-closed" }}
-  {{ end }}
-
-  {{ $style := printf "w-4 h-4 %s" $fgColor }}
-
-  {{ i $icon $style }}
-{{ end }}
-
 {{ define "pullList" }}
   {{ $list := index . 0 }}
   {{ $root := index . 1 }}
@@ -77,7 +25,7 @@
             </div>
           {{ end }}
           <div class="{{ if not $isCurrent }} pl-6 {{ end }} flex-grow min-w-0 w-full py-2">
-            {{ block "summarizedHeader" $pull }} {{ end }}
+            {{ template "repo/pulls/fragments/summarizedHeader" $pull }}
           </div>
         </div>
       </a>
