--- a/appview/pages/templates/settings.html
+++ b/appview/pages/templates/settings.html
@@ -140,7 +140,7 @@
         <form
           hx-delete="/settings/emails"
           hx-confirm="Are you sure you wish to delete the email '{{ .Address }}'?"
-          hx-indicator="#delete-email-{{ .Address }}-spinner"
+          hx-indicator="#delete-email-{{ $index }}-spinner"
         >
           <input type="hidden" name="email" value="{{ .Address }}">
           <button
@@ -150,7 +150,7 @@
           >
             {{ i "trash-2" "w-5 h-5" }}
             <span class="hidden md:inline">delete</span> 
-            <span id="delete-email-{{ .Address }}-spinner" class="group">
+            <span id="delete-email-{{ $index }}-spinner" class="group">
               {{ i "loader-circle" "w-4 h-4 animate-spin hidden group-[.htmx-request]:inline" }}
             </span>
           </button>
